feat(pwn): add studysim

--- a/pwn/docker-compose.yml
+++ b/pwn/docker-compose.yml
@@ -12,3 +12,7 @@ services:
     build: ./got_it
     ports:
       - 127.0.0.1:5004:9999
+  studysim:
+    build: ./studysim
+    ports:
+      - 127.0.0.1:5005:9999
