--- a/pwn/got_it/Dockerfile
+++ b/pwn/got_it/Dockerfile
@@ -31,7 +31,7 @@ RUN chmod +x /start.sh
 COPY ./bin/ /home/ctf/
 RUN chown -R root:ctf /home/ctf && \
     chmod -R 750 /home/ctf && \
-    chmod 740 /home/ctf/flag.txt
+    chmod 740 /home/ctf/flag.txt && \
     chmod 740 /home/ctf/acknowledgements.txt
 
 CMD ["/start.sh"]
