feat(web): add traffic-light-w

--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3"
 services:
-  blurry-eyes:
-    build: ./blurry-eyes
+  traffic-light-w:
+    build: ./traffic-light-w
     ports:
-      - 127.0.0.1:8001:80
+      - 127.0.0.1:8002:8080
+    links:
+      - traffic-light-1004
+  traffic-light-1004:
+    build: ./traffic-light-w-internal
